--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       Too simply...<br>
       5ater ken 3andek dawr kbiiir fi we7d mn a7la chapters elli 3chthom fi 7yeti.<br>
       W zid 5aterk mouch just sa7bt mokyy, enti el comfort zone mte3ha,<br>
-      U deserve much more for being that.<br><br>
+      Being that for her is worth more than I could ever give><br><br>
 
       Mt2aked elli "Thank you" maykafich...<br>
       ama still, thank you for being a7la sa7ba l a7la tofla 3raft'ha.<br>
