--- a/index.html
+++ b/index.html
@@ -63,18 +63,20 @@
       W zid 5aterk mouch just sa7bt mokyy, enti el comfort zone mte3ha,<br>
       Being that for her is worth more than I could ever give><br><br>
 
-      Mt2aked elli "Thank you" maykafich...<br>
-      ama still, thank you for being a7la sa7ba l a7la tofla 3raft'ha.<br>
+      Mt2aked elli "Thank you" matkfich<br>
+      ama still, thank you for being a7la sa7ba l a7la tofla 3raftha<br>
       Thank you 3la el energy elli ta3ti fiha l mokyy.<br><br>
 
-      Ntsawrk chala9t elli ena manich tayar f ta3bir, ama i hope nkoun jewbtk 3ala "3lh l gift ?"<br>
+      (Ntsawrk chala9t elli ena manich tayara f ta3bir, ama i hope nkoun jewbtk 3ala ----> "3lh l gift ?"<br>
       this is me trying to put respect.<br><br>
 
-      W taw ken mokyy 9e3da ta9ra m3ak — mat5alihech tkaml (i’m sure 100% elli enti bch t5aliha tkaml )<br>
-      Ines, i respect u 3la kol chay w i respect everything u did for us.<br><br>
+      W taw ken mokyy 9e3da ta9ra m3ak ————————— mat5alihech tkaml (i’m sure 100% elli enti bch t5aliha tkaml 😂)<br>
+      Ines, i respect u 3la kol chay w I respect everything u did for us.<br><br>
 
       W just 3andi talab s8ir:<br>
-      Please, stay that safe place for mokyy forever and take care of her 💗
+      Please, stay that safe place for mokyy forever and take care of her 
+
+      THANK U
     </p>
 
     <p class="signature">
