--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
       (Ntsawrk chala9t elli ena manich tayara f ta3bir, ama i hope nkoun jewbtk 3ala ----> "3lh l gift ?"<br>
       this is me trying to put respect.<br><br>
 
-      W taw ken mokyy 9e3da ta9ra m3ak ————————— mat5alihech tkaml (i’m sure 100% elli enti bch t5aliha tkaml 😂)<br>
+      W taw ken mokyy 9e3da ta9ra m3ak ————————— mat5alihech tkaml (i’m sure 100% elli enti bch t5aliha tkaml 😂)<br><br>
       Ines, i respect u 3la kol chay w I respect everything u did for us.<br><br>
 
       W just 3andi talab s8ir:<br>
-      Please, stay that safe place for mokyy forever and take care of her 
-
+      Please, stay that safe place for mokyy forever and take care of her<br><br>
       THANK U
     </p>
 
