--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       W just 3andi talab s8ir:<br>
       Please, stay that safe place for mokyy forever and take care of her<br><br>
-      THANK U <3
+      Thank u <3
     </p>
 
     <p class="signature">
